react-front-end/src/styles/layout/_containers.scss
.container {
  display: flex;
  justify-content: center;
  // max-width: 800px;
  margin: auto;
  // overflow: auto;
  // min-height: 100px;
  // border: 1px solid #0e3147;
  margin: 30px;
  border-radius: 5px;
  &-allmeets {
    width: 30%;
    margin:10px
  }
  &-aurora {
    flex-direction: row;
    margin-right: 15px;
  }
}

.weather {
  display: flex;
  flex-direction: column;
  margin-left: 15px;
  // margin-right: 15px;
}

.spacer {
  height: 26px;
}  

.items {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  height: 381px;
  &-1, &-4 {
    @include item;
    align-self: center;
    background-color: #092a3c;
  }  
  &-2, &-3 {
    @include item;
    align-self: center;
    background-color: #5abbcc;
  }  
}  

.mpanel {
  display: flex;
  flex-direction: column;
  margin: 15px;
  justify-content:space-evenly;
  width: 600px
}

.meetups {
  display: flex;
  flex-direction: column;
  &-hidden {
    display: flex;
    visibility: hidden;
  }
}

.cont {
  display: flex;
  justify-content: center;
  // max-width: 800px;
  margin: auto;
  // overflow: auto;
  // min-height: 100px;
  // border: 1px solid #0e3147;
  margin: 30px;
  border-radius: 5px;
  &-allmeets {
    width: 30%;
    margin:10px
  }
  &-aurora {
    flex-direction: row;
    margin-right: 15px;
  }
}

